--- a/cloudalibaba-provider-payment9001/src/main/resources/application.yml
+++ b/cloudalibaba-provider-payment9001/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 1.117.156.46:8848 #配置Nacos地址
+        server-addr: * #配置Nacos地址
 
 management:
   endpoints:
