--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
     username: root
     password: 123456
   redis:
-    host: 1.117.156.46
+    host: *
     port: 6379
-    password: 123456
+    password: *
     database: 1
 
 
