--- a/normal/src/main/resources/application.yml
+++ b/normal/src/main/resources/application.yml
@@ -6,16 +6,16 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 1.117.156.46:8848 #配置Nacos地址
+        server-addr: * #配置Nacos地址
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/haruharu?serverTimezone=Asia/Shanghai
     username: root
     password: 123456
   redis:
-    host: 1.117.156.46
+    host: *
     port: 6379
-    password: 123456
+    password: *
     database: 1
 #    key:
 #      prefix:
