--- a/normal/pom.xml
+++ b/normal/pom.xml
@@ -84,6 +84,10 @@
             <artifactId>log4j-to-slf4j</artifactId>
             <version>2.14.1</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
