--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
                 <artifactId>aspectjweaver</artifactId>
                 <version>1.9.2</version>
             </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.2.3</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
