--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>juc</module>
         <module>leetcode</module>
         <module>design-mode</module>
+        <module>rabbitmq</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -132,6 +133,16 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-pool2</artifactId>
                 <version>2.10.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.rabbitmq</groupId>
+                <artifactId>amqp-client</artifactId>
+                <version>5.9.0</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.6</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
