--- a/sa-user/pom.xml
+++ b/sa-user/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ryota</groupId>
-    <artifactId>cof-user</artifactId>
+    <artifactId>sa-user</artifactId>
 
     <dependencies>
         <dependency>
@@ -98,6 +98,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
             <version>2.10.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+            <version>1.30.0</version>
         </dependency>
     </dependencies>
 
