--- a/rabbitmq/pom.xml
+++ b/rabbitmq/pom.xml
@@ -20,6 +20,10 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
